# glaciation-uc4-shoalmate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  UC4_KPIs.xlsx  example.env  pyproject.toml  settings.env
.github/workflows/: build-and-publish.yaml  build.yaml  test.yaml
KPIs/: UC4_KPIs.xlsx
charts/shoalmate/: Chart.yaml  values.yaml
charts/shoalmate/templates/: deployment.yaml  shoalmate-deployment.yaml  timesim-deployment.yaml  timesim-ingress.yaml  timesim-service.yaml
charts/uc4-shoalmate/: Chart.yaml
charts/uc4-shoalmate/templates/: deployment.yaml
helm-charts/: index.yaml  shoalmate-0.0.5.tgz  shoalmate-0.0.7.tgz  shoalmate-0.0.8.tgz  shoalmate-0.1.0.tgz  shoalmate-0.1.1.tgz  shoalmate-0.1.10.tgz  shoalmate-0.1.11.tgz  shoalmate-0.1.2.tgz  shoalmate-0.1.3.tgz  shoalmate-0.1.4.tgz  shoalmate-0.1.6.tgz  shoalmate-0.1.7.tgz  shoalmate-0.1.8.tgz  shoalmate-0.1.9.tgz  shoalmate-0.2.0.tgz  shoalmate-0.2.1.tgz  shoalmate-0.2.2.tgz  shoalmate-0.2.3.tgz  shoalmate-0.2.4.tgz  shoalmate-0.2.5.tgz  shoalmate-0.2.6.tgz  shoalmate-0.2.7.tgz  shoalmate-0.2.8.tgz  shoalmate-0.2.9.tgz  shoalmate-0.3.0.tgz  shoalmate-0.3.1.tgz  shoalmate-0.4.0.tgz  shoalmate-0.4.1.tgz  shoalmate-0.4.2.tgz  shoalmate-0.4.3.tgz
src/shoalmate/: allocator.py  client.py  index.py  index_storage.py  main.py  model.py  orchestrator.py  ranker.py  settings.py
src/shoalmate/clients/: minio.py
src/tests/shoalmate/: conftest.py  test_allocator.py  test_main.py  test_orchestrator.py  test_settings.py
src/tests/shoalmate/ranker/: test_e2e.py  test_mocked.py
src/tests/timesim/: conftest.py  test_api.py  test_client.py  test_main.py
src/timesim/: api.py  clock.py  domain.py  logger.py  main.py  schemas.py  timesim.py
src/timesim/static/: index.html  main.css  main.js
tests/shoalmate/: test_main.py
tests/shoalmate/index/: test_e2e.py  test_index.py  test_mocked.py
tests/shoalmate/ranker/: test_e2e.py
