[project]
name = "glaciation-uc4-shoalmate"
version = "0.1.0"
description = "Multi-cluster data orchestrator for GLACIATION use case 4"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "minio>=7.2.15",
    "pydantic-settings>=2.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.1",
]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as end-to-end tests that require real connections",
]
addopts = '-m "not e2e"'
