[project]
name = "glaciation-uc4-shoalmate"
version = "0.0.0"
description = "Multi-cluster data orchestrator for GLACIATION use case 4"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "minio>=7.2.15",
    "pydantic-settings>=2.9.1",
]

[project.optional-dependencies]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["src/tests/"]

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as end-to-end tests that require real connections",
]
addopts = '-m "not e2e"'

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest-minio-mock>=0.4.18",
    "pytest-mock>=3.14.1",
    "pytest>=8.0.0",
    "ruff>=0.12.2",
    "pytest-cov>=6.2.1",
]

[tool.ruff]
target-version = "py313"
