[project]
name = "glaciation-uc4-shoalmate"
version = "0.0.0"
description = "Multi-cluster data orchestrator for GLACIATION use case 4"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "minio>=7.2.15",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["src/tests/"]

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as end-to-end tests that require real connections",
]
addopts = '-m "not e2e"'

[dependency-groups]
dev = [
    "fastapi[standard]>=0.116.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.2.1",
    "pytest-minio-mock>=0.4.18",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.2",
]

[tool.ruff]
target-version = "py313"
